<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_goods"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_goods_item" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_archive"
            android:title="@string/menu_history_item" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_report"
            android:title="@string/menu_reports_item" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings_item" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_question"
            android:title="@string/menu_support_item" />
    </group>
</menu>